# donda

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  lib.rs  main.rs  sacct.rs  tui.rs
